[package]
name = "santulankarta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
mini-redis = "0.4"
log = "0.4.20"
